languages/montiarc-fe/src/test/resources/automaton/invalid/AutomatonWithoutState.arc
package automaton.invalid;

component AutomatonWithoutState {

  automaton AutomatonWithoutState {
  }
}
